# 100_days_of_code-deploy_blog

./: main.py  pyproject.toml
templates/: footer.html  header.html  index.html
